8318183: C2: VM may crash after hitting node limit

Reviewed-by: phh
Backport-of: 31ef400f31b1fd9a861870cce69f6d3eec72aa46